test quick fix of extra padding in winning strip para

--- a/ttt.css
+++ b/ttt.css
@@ -38,7 +38,7 @@
 }
 .winnerStrip{
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     left: 0;
     top: 0;
